--- a/AppScope/app.json5
+++ b/AppScope/app.json5
@@ -1,6 +1,6 @@
 {
   "app": {
-    "bundleName": "com.hmosdemos.moonphases",
+    "bundleName": "com.hmosdemos.wearable.moon_phases",
     "vendor": "hmosdemos",
     "versionCode": 1000000,
     "versionName": "1.0.0",
